--- a/src/style.css
+++ b/src/style.css
@@ -35,8 +35,8 @@ form.create-field {
 }
 form.create-field div {
   display: flex;
-  justify-content: space-between; 
-  margin-bottom: 10px; 
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
 
 form.create-field input {
@@ -53,7 +53,7 @@ form.create-field button {
   right: 10px;
   bottom: -68px;
   background: #fff;
-  color: #ccc;
+  color: #5e5b5b;
   border-radius: 50%;
   border: none;
   width: 100px;
@@ -78,4 +78,15 @@ form.create-field button {
   border: 1px solid #ccc;
   border-radius: 5px;
   outline: none;
+}
+footer {
+  position: absolute;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+}
+
+footer p {
+  color: #5e5b5b;
 }
